// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: empty-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: empty-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: full-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: full-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: missing-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: missing-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;
